# Prova-Intermedia-2023-2024

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Book.h  BookShelf.h  Date.h
src/: Book.cpp  BookShelf.cpp  Date.cpp  main  main.cpp  tester.cpp
